--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -278,6 +278,7 @@ zh:
         trend: 趋势
         calculate_type: 计算型
         not_calculate_type: 否
+        calculate_type: 是
         list: 选择KPI
         formula: 计算公式
         invalid: 公式不合法
