--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -217,6 +217,7 @@ zh:
       title: EPM
       name: 智能工厂
       desc: 安全，迅速，快捷，EPM帮您挖掘隐藏的数据
+      language: 选择语言
   auth:
     view:
       login_title: 登 录
