--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -210,23 +210,183 @@ en:
     errors:
       <<: *errors
   # brilliantech project
+  welcome:
+    title: Welcome
+    sub_title: Welcome EPM
+    entrys:
+      title: Entrance of your role
+      kpi_entry: Entry KPI
+      analyse: Analytics
+      dashboard: Dashboard
+      manage_kpi: Manage KPI
+    statistics:
+      title: Current statistics
+      staff: Staff structure
+      table: Statistics
+      item:
+        kpi: KPI
+        entity: Entity
+        user: User
+        view: Entity Group
   epm:
     base:
       title: EPM
       name: IntelligentFactory
       desc: Secure, quick and accurate, EPM uncovers the potential of data
       language: Language
+      welcome: Welcome
   auth:
-   view:
-    login: Login
-    sign: Sign Up
-   msg:
-    login_success: Login successfully!
-    login_require: Please Login!
-    logout_success: Logout successfully!
-    logout_require: Please Sign up!
-    email_token: Email has been Signed up!
-    sign_success: Sign up successfully!
-    sign_close: Registration is not open!
-    sign_fail: Sign up failed!
-    local_account: We're sorry, but we could not locate your account.If you are having issues try copying and pasting the URL from your email into your browser or restarting the reset password process.
+    view:
+      login_title: Sign In
+      login_btn: Sign in
+      sign_title: Sign up Now
+      sign_btn: Sign up
+      signout_btn: Logout
+      submit_btn: Ok
+      email: Email
+      pwd: Password
+      confirm: Ok
+      con_pwd: Password Confirmation
+      company: Company Name
+    msg:
+      login_success: Login successfully!
+      login_require: Please Login!
+      logout_success: Logout successfully!
+      logout_require: Please Sign up!
+      email_token: Email has been Signed up!
+      sign_success: Sign up successfully!
+      sign_close: Registration is not open!
+      sign_fail: Sign up failed!
+      local_account: We're sorry, but we could not locate your account.If you are having issues try copying and pasting the URL from your email into your browser or restarting the reset password process.
+  menu:
+    start: Start
+    dashboard: Dashboard
+    analytics: Analytics
+    reports: Report
+    manage: Manage
+    kpi: KPI
+    user: User
+    view: Entity Group
+    billing: Account
+    entry_kpi: KPI Entry
+    department: Entity
+  analytics:
+    title: Analytics
+    kpi_category: KPI Category
+    kpi: KPI
+    view: Entity Groups
+    begin_time: Start Time
+    end_time: End Time
+    sum: Total
+    average: Average
+    add_chart: Analyse
+    date: Data
+    percent: Percent
+    target: Target
+    sum_target: Target Total
+    aver_target: Target Average
+    value: Actual Value
+    sum_value: Actual Value Total
+    aver_value: Actual Value Average
+    tcr: TCR
+    close_btn: Close
+  #kpi entry
+  entry:
+    desc:
+      entry: KPI Entry
+      category: Category
+      trend: Trend
+      actual: Actual Value
+      recent: Recent Value
+  #manage
+  manage:
+    base:
+      delete_btn: Delete
+      edit_btn: Edit
+      add_btn: Add
+      cancel_btn: Cancel
+      enter_confirm: Enter：  Confirm
+      esc_cancel: ESC： Cancel
+      delete_confirm:  Are you sure to delete？
+      next: Next
+      finish: Finish
+    kpi:
+      desc:
+        create: Create KPI
+        create_desc: Create kpi in different category,then you can edit it's max target and min target
+        create_now: Create Now
+        kpi_library_desc: Create kpi in different category,then you can edit it's max target and min target
+        choose_now: Choose Now
+        next_desc: Create kpi in different category,then you can edit it's max target and min target
+      title: Manage KPI
+      category: KPI Category
+      kpi_library: KPI Library
+      name: Name
+      description: Description
+      frequency: Frequency
+      target: Target Max
+      target_min: Target Min
+      unit: Unit
+      trend: Trend
+      is_calculate_type: Is need calculate
+      not_calculate_type: No
+      calculate_type: Yes
+      list: Choose KPI
+      formula: Formula
+      invalid: Formula is not valid
+      cannot_repeat: Can not repeat
+      freq_item:
+        hourly: Houly
+        daily: Daily
+        weekly: Weekly
+        monthly: Monthly
+        quarterly: Quarterly
+        yearly: Yearly
+      trend_item:
+        none: None
+        up: Up
+        down: Down
+    department:
+      desc:
+        dep: Entity
+        manage: Manage Entity
+        name: Entity Name
+        create: Create Entity
+        create_desc: Department is the place to put your staff and the view is made up of departments
+        give_name: Give it a name
+        next_desc: After creating department , it's time to create user(staff) to your department so that they can contribute to their department's KPI
+    user:
+      desc:
+        name: User
+        manage: Manage User
+        authority: Authority
+
+        create: Create User
+        create_desc: 用户，即你在不同部门创建的员工，完成创建后，你可以给他们分配KPI
+        create_now: 现在创建
+
+        assign: 分配KPI
+        assign_desc: 想分配任务一样给你的员工分配不同的KPI
+        assign_now: 现在分配
+
+        next_desc: 在分配完KPI后，你应该将你的部门放到你的观察点中，以观察点为基础，我们为你生成分析数据和仪表盘
+
+      role:
+        admin: 管理员
+        director: 总经理
+        manager: 经理
+        user: 普通用户
+      new:
+        name: 用户名
+        email: 邮箱
+        pwd: 密码
+        pwd_con: 确认密码
+        dep: 部门
+    view:
+      desc:
+        name: 观察点
+        manage: 管理观察点
+        dep_list: 部门列表
+        assign_dep: 分配部门
+        assign_desc: 首先创建一个观察点，然后将部门加入到观察点中，一个观察点是查看分析数据的基础
+        next_desc: 完成管理中的所有部分后， 你可以让你的员工（用户）通过‘KPI输入’来输入KPI
