--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -460,3 +460,9 @@ en:
     column:
        max: Max Value
        min: Min Value
+  fix:
+    zone_too_large: zone to large error!
+    cannot_destroy: can not delete
+    add_fail: add fail
+    cannot_destroy_contain_kpi: it is base kpi, cannot delete!
+    not_exists: not exists
