--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -454,6 +454,7 @@ en:
       total: Total
       record: Record
       average: Average
+      max: Max
     pie:
        select: Select
        total: Total
