--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -476,3 +476,19 @@ zh:
     cannot_destroy_contain_kpi: 包含于计算型，不可删除！
     not_exists: 此项不存在
     cannot_repeat: 已存在此项，不可重复
+    upload_kpi: 上传KPI
+    download_template: 下载模板
+    upload_data_file: 上传数据文件(最大为20M)
+    upload_finish: 完成
+    kpi_upload_support_format: 支持格式 Excel(.xls and .xlsx)
+    error_title: 错误
+    upload_error: 您在上传中出现了错误，无法完成上传
+    click_download_error: 点击这里下载错误文件，帮助您正确上传:)
+    close: 关闭
+    handing_file: 正在处理文件，请等待... 
+  vali_msg:
+    invalid_date: 日期格式错误
+    invalid_value: 数值错误
+    kpi_not_assign: KPI未分配给此用户
+    invalid_kpi: KPI错误
+    invalid_user_email: 用户Email错误
