--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -385,6 +385,7 @@ en:
         pwd: Password
         pwd_con: Password Confirmation
         dep: Data Point
+        entity_group: Entity
         title: Title
     view:
       desc:
