--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -354,6 +354,9 @@ en:
         dep: Data Point
         manage: Manage Data Point
         name: Data Point Name
+        code: Code
+        description: Descripion
+        user_quanity: User Quantity
         create: Create Data Point
         create_desc: Department is the place to put your staff and the view is made up of data points
         give_name: Give it a name
