--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -364,32 +364,27 @@ en:
         next_desc: After creating data point , it's time to create user(staff) to your data point so that they can contribute to their data point KPI
     user:
       desc:
-        name: User
         manage: Manage User
-        authority: Authority
-        title: Title
         create: Create User
         create_desc: User as well as your staff in different data point who created by you and then entry the kpi assigned
         create_now: Create Now
-
         assign: Assign KPI
         assign_desc: User as well as your staff in different data point who created by you and then entry the kpi assigned
         assign_now: Assign Now
-
         next_desc: User as well as your staff in different data point who created by you and then entry the kpi assigned
-
       role:
         admin: System Admin
         director: Director
         manager: Manager
         user: User
       new:
+        authority: Authority
         name: Name
         email: Email
         pwd: Password
         pwd_con: Password Confirmation
-        dep: Data Point
-        entity_group: Entity
+        entity: Data Point
+        department: Department
         title: Title
     view:
       desc:
