--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -399,9 +399,15 @@ zh:
           name: 视图
           manage: 管理视图
           dep_list: 输入点列表
+          user_list: 用户列表
           assign_dep: 分配输入点
           assign_desc: 首先创建一个视图，然后将输入点加入到视图中，一个视图是查看分析数据的基础
           next_desc: 完成管理中的所有部分后， 你可以让你的员工（用户）通过‘KPI输入’来输入KPI
+          share: 共享
+          share_desc: 共享你的视图....
+          share_now: 开始共享
+        validate:
+          already_shared: 已共享，不可重复
         already_assigned: 输入点已经分配，不可重复
         unassign_confirm: 确定取消分配此输入点？
   #dashboard
