--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -209,6 +209,24 @@ en:
   activerecord:
     errors:
       <<: *errors
+  devise:
+      confirmations:
+        confirmed: "Your account was successfully confirmed."
+        send_instructions: "You will receive an email with instructions about how to confirm your account in a few minutes."
+        send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions about how to confirm your account in a few minutes."
+      failure:
+        already_authenticated: "You are already signed in."
+        inactive: "Your account is not activated yet."
+        invalid: "Invalid email or password."
+        locked: "Your account is locked."
+        last_attempt: "You have one more attempt before your account will be locked."
+        not_found_in_database: "Invalid email or password."
+        timeout: "Your session expired. Please sign in again to continue."
+        unauthenticated: "You need to sign in or sign up before continuing."
+        unconfirmed: "You have to confirm your account before continuing."
+      sessions:
+        signed_in: "Signed in successfully."
+        signed_out: "Signed out successfully."
   # brilliantech project
   welcome:
     title: Welcome
@@ -250,6 +268,7 @@ en:
       company: Company Name
     msg:
       login_success: Login successfully!
+      login_fail: Error Login Info!
       login_require: Please Login!
       logout_success: Logout successfully!
       logout_require: Please Sign up!
