--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -326,6 +326,7 @@ en:
       local_account: We're sorry, but we could not locate your account.If you are having issues try copying and pasting the URL from your email into your browser or restarting the reset password process.
       pwd_changed: Password changed!
       old_pwd_error: Original password error!
+      fill_blank: Please fill in all the blank!
   menu:
     start: Start
     dashboard: Dashboard
