--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -366,6 +366,7 @@ zh:
     tcr: TCR
     close_btn: 关闭
     select-dim: 选择维度
+    fill_all_blank: 星号不能为空
     detail:
       drag: 拖拽维度或某个维度值
       back: 返回分析页
@@ -384,6 +385,7 @@ zh:
       average: 平均值
       rate: 占比
       year-analyse: 同比分析
+      choose_one_dim: 请至少选择一个维度进行聚合
   #kpi entry
   entry:
     desc:
@@ -455,7 +457,7 @@ zh:
         dimensions-edit: 编辑维度
         dimensions-add: 添加维度
         dimensions-enter: 回车添加维度
-        dimensions-same-error: 该KPI已经有相同的属性!
+        dimensions-same-error: 该KPI已经有相同的维度!
         dimensions-kpi-not-fount: KPI或者KPI维度没有找到，请检查！
         details: 详细
         category-not-repeat: 类别不可重复!
