--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -408,6 +408,8 @@ en:
       next: Next
       finish: Finish
       assign_all_kpi: Assign All
+      fill-all-star: Star should not be empty
+      not-empty: should not be empty
     kpi:
       desc:
         create: Create KPI
